--- a/app/i18n/nl-NL/settings.json
+++ b/app/i18n/nl-NL/settings.json
@@ -12,13 +12,13 @@
   "Remote Control": "Afstandsbediening",
   "Night mode": "Nacht modus",
   "If you are experiencing weird behavior, you can try deleting your cache directory.  This will result in you losing your scene configuration and settings, but can fix some stability issues.": "If you are experiencing weird behavior, you can try deleting your cache directory.  This will result in you losing your scene configuration and settings, but can fix some stability issues.",
-  "Show Cache Directory": "Show Cache Directory",
-  "Delete Cache and Restart": "Delete Cache and Restart",
-  "Upload Cache to Developers": "Upload Cache to Developers",
-  "Restart Streamlabels Session": "Restart Streamlabels Session",
-  "Run Auto Optimizer": "Run Auto Optimizer",
-  "Confirm stream title and game before going live": "Confirm stream title and game before going live",
-  "WARNING! You will lose all scenes, sources, and settings. This cannot be undone!": "WARNING! You will lose all scenes, sources, and settings. This cannot be undone!",
+  "Show Cache Directory": "Toon cachedirectory",
+  "Delete Cache and Restart": "Verwijder Cache en herstart",
+  "Upload Cache to Developers": "Upload Cache naar ontwikkelaars",
+  "Restart Streamlabels Session": "Herstart Streamlabels sessie",
+  "Run Auto Optimizer": "Uitvoeren van de automatisch Optimizer",
+  "Confirm stream title and game before going live": "Stream titel en spel bevestigen voordat u live gaat",
+  "WARNING! You will lose all scenes, sources, and settings. This cannot be undone!": "WAARSCHUWING! U verliest alle scènes, bronnen en instellingen. Dit kan niet ongedaan worden gemaakt!",
   "Your cache directory has been successfully uploaded.  The file name %{file} has been copied to your clipboard.  Please paste it into discord and tag a developer.": "Your cache directory has been successfully uploaded.  The file name %{file} has been copied to your clipboard.  Please paste it into discord and tag a developer.",
   "Streamlabels session has been succesfully restarted!": "Streamlabels session has been succesfully restarted!",
   "This action will restart the application. Continue?": "This action will restart the application. Continue?",
