--- a/app/i18n/en-US/settings.json
+++ b/app/i18n/en-US/settings.json
@@ -69,5 +69,8 @@
   "Default": "Default",
   "Custom Encoder Settings": "Custom Encoder Settings",
   "Audio Bitrate": "Audio Bitrate",
-  "Video Bitrate": "Video Bitrate"
+  "Video Bitrate": "Video Bitrate",
+  "Scene item selection mode": "Scene item selection mode",
+  "Single click selects group. Double click selects item": "Single click selects group. Double click selects item",
+  "Double click selects group. Single click selects item": "Double click selects group. Single click selects item"
 }
