Fixed and added Korean translate

--- a/app/i18n/ko-KR/customization.json
+++ b/app/i18n/ko-KR/customization.json
@@ -2,6 +2,6 @@
   "Show the live dock (chat) on the left side": "라이브 독 (채팅) 왼쪽에 표시하기",
   "Chat Text Size": "채팅 텍스트 크기",
   "Chat Width": "채팅 폭",
-  "Enable BetterTTV emotes for Twitch": "트위치 BetterTTV 이모트 활성화 시키기",
-  "Enable FrankerFaceZ emotes for Twitch": "트위치 FrankerFaceZ 이모트 활성화 시키기"
+  "Enable BetterTTV emotes for Twitch": "Twitch BetterTTV 이모티콘 활성화",
+  "Enable FrankerFaceZ emotes for Twitch": "Twitch FrankerFaceZ 이모티콘 활성화"
 }
