--- a/app/i18n/ko-KR/sources.json
+++ b/app/i18n/ko-KR/sources.json
@@ -1,144 +1,144 @@
 {
-  "Add Source": "Add Source",
-  "Add images to your scene.": "Add images to your scene.",
-  "Add a slideshow of images to your scene.": "Add a slideshow of images to your scene.",
-  "Add videos or sound clips to your scene.": "Add videos or sound clips to your scene.",
-  "Capture a specific window that's open on your computer.": "Capture a specific window that's open on your computer.",
-  "Compatible with most modern browsers and programs": "Compatible with most modern browsers and programs",
-  "Select from your build in USB webcam or an external.": "Select from your build in USB webcam or an external.",
-  "Built in webcam": "Built in webcam",
-  "Logitech webcam": "Logitech webcam",
-  "Capture cards (Elgato, Avermedia, BlackMagic)": "Capture cards (Elgato, Avermedia, BlackMagic)",
-  "Captures your desktop audio for the purpose of playing sound, such as music or speech.": "Captures your desktop audio for the purpose of playing sound, such as music or speech.",
-  "Desktop audio": "Desktop audio",
-  "Add a color to the background of your whole scene or just a part.": "Add a color to the background of your whole scene or just a part.",
-  "Allows you to add web-based content as a source, such as web pages and Flash SWFs.": "Allows you to add web-based content as a source, such as web pages and Flash SWFs.",
+  "Add Source": "소스 추가",
+  "Add images to your scene.": "이미지를 장면에 추가하세요.",
+  "Add a slideshow of images to your scene.": "슬라이드 쇼를 장면에 추가하세요.",
+  "Add videos or sound clips to your scene.": "영상이나 사운드 클립을 장면에 추가하세요.",
+  "Capture a specific window that's open on your computer.": "컴퓨터에 열려있는 특정 창을 캡쳐하세요.",
+  "Compatible with most modern browsers and programs": "대부분의 최신 브라우저와 프로그램과 호환됨",
+  "Select from your build in USB webcam or an external.": "USB 웹캠이나 외부 장치를 이용해보세요.",
+  "Built in webcam": "내장 웹캠",
+  "Logitech webcam": "Logitech 웹캠",
+  "Capture cards (Elgato, Avermedia, BlackMagic)": "캡쳐 카드 (Elgato, Avermedia, BlackMagic)",
+  "Captures your desktop audio for the purpose of playing sound, such as music or speech.": "음악 또는 음성과 같은 사운드를 재생하기 위해 데스크톱 오디오를 캡쳐합니다.",
+  "Desktop audio": "데스크톱 오디오",
+  "Add a color to the background of your whole scene or just a part.": "전체 장면의 배경이나 일부분에 색을 추가합니다.",
+  "Allows you to add web-based content as a source, such as web pages and Flash SWFs.": "웹페이지나 Flash SWF와 같은 웹 기반 컨텐츠를 사용할 수 있도록 합니다.",
   "Websites": "Websites",
-  "Third party widget": "Third party widget",
-  "Add text to your scene and adjust its style.": "Add text to your scene and adjust its style.",
-  "System Fonts": "System Fonts",
-  "System Sizes": "System Sizes",
-  "Capture your entire computer monitor.": "Capture your entire computer monitor.",
-  "Primary monitor": "Primary monitor",
-  "Secondary monitor": "Secondary monitor",
-  "Capture a game you're playing on your computer.": "Capture a game you're playing on your computer.",
-  "Built in works with most modern computer games": "Built in works with most modern computer games",
-  "Allow you to capture NDI output streams.": "Allow you to capture NDI output streams.",
-  "Any device that attaches to a computer for the purpose of capturing sound, such as music or speech.": "Any device that attaches to a computer for the purpose of capturing sound, such as music or speech.",
-  "Built in microphones": "Built in microphones",
-  "USB microphones": "USB microphones",
-  "Other USB devices": "Other USB devices",
-  "Capture the feed your decklink device is capturing.": "Capture the feed your decklink device is capturing.",
-  "Works with most of the recent Blackmagic cards.": "Works with most of the recent Blackmagic cards.",
-  "Thanks viewers with notification popups.": "Thanks viewers with notification popups.",
-  "Donations": "Donations",
-  "Subscriptions": "Subscriptions",
-  "Follows": "Follows",
-  "Bits": "Bits",
-  "Hosts": "Hosts",
+  "Third party widget": "제삼자 위젯",
+  "Add text to your scene and adjust its style.": "장면에 텍스트를 추가하고 스타일을 수정할 수 있습니다.",
+  "System Fonts": "시스템 폰트",
+  "System Sizes": "시스템 크기",
+  "Capture your entire computer monitor.": "컴퓨터 모니터 전체를 캡쳐합니다.",
+  "Primary monitor": "메인 모니터",
+  "Secondary monitor": "보조 모니터",
+  "Capture a game you're playing on your computer.": "컴퓨터에서 플레이하고 있는 게임을 캡쳐합니다.",
+  "Built in works with most modern computer games": "대부분의 최신 컴퓨터 게임과 호환됨",
+  "Allow you to capture NDI output streams.": "NDI 출력을 캡쳐해서 방송할 수 있도록 합니다.",
+  "Any device that attaches to a computer for the purpose of capturing sound, such as music or speech.": "모든 음성이나 음악 같이 사운드를 캡쳐할 목적으로 컴퓨터에 연결되는 모든 장치입니다.",
+  "Built in microphones": "내장 마이크",
+  "USB microphones": "USB 마이크",
+  "Other USB devices": "기타 USB 장치",
+  "Capture the feed your decklink device is capturing.": "DeckLink 장치가 캡쳐하는 피드를 캡쳐합니다.",
+  "Works with most of the recent Blackmagic cards.": "대부분의 Blackmagic 카드와 호환됩니다.",
+  "Thanks viewers with notification popups.": "팝업 알림으로 시청자들에게 감사를 표시합니.",
+  "Donations": "후원",
+  "Subscriptions": "구독",
+  "Follows": "팔로우",
+  "Bits": "비트",
+  "Hosts": "호스트",
   "Show off your most recent donations to your viewers.": "Show off your most recent donations to your viewers.",
   "Include your channel's most recent events into your stream.": "Include your channel's most recent events into your stream.",
   "Redemptions": "Redemptions",
-  "Donation Goal": "Donation Goal",
+  "Donation Goal": "후원 목표",
   "Set a goal for your viewers to help you reach.": "Set a goal for your viewers to help you reach.",
-  "Follower Goal": "Follower Goal",
-  "Twitch Follows": "Twitch Follows",
-  "Youtube Follows": "Youtube Follows",
-  "Mixer Follows": "Mixer Follows",
-  "Bit Goal": "Bit Goal",
-  "Twitch Bits": "Twitch Bits",
-  "Subscription Goal": "Subscription Goal",
-  "Youtube Subscribers": "Youtube Subscribers",
-  "Chatbox": "Chatbox",
-  "Include your channel's chat into your stream.": "Include your channel's chat into your stream.",
-  "Twitch chat": "Twitch chat",
-  "Youtube chat": "Youtube chat",
-  "The Jar": "The Jar",
-  "The jar that catches bits, tips, and more.": "The jar that catches bits, tips, and more.",
-  "Viewer Count": "Viewer Count",
-  "Show off your viewers from multiple platforms.": "Show off your viewers from multiple platforms.",
-  "Stream Boss": "Stream Boss",
-  "Battle with bits to be the boss of the stream!": "Battle with bits to be the boss of the stream!",
-  "Credits": "Credits",
-  "Rolling credits to play at the end of your stream.": "Rolling credits to play at the end of your stream.",
-  "New Followers": "New Followers",
-  "New Subscribers": "New Subscribers",
-  "Cheers": "Cheers",
-  "Spin Wheel": "Spin Wheel",
-  "Spin the wheel to make a decision.": "Spin the wheel to make a decision.",
-  "The streamer manually triggers a spin anytime while they are live.": "The streamer manually triggers a spin anytime while they are live.",
-  "Allows you to add existing scene as a source": "Allows you to add existing scene as a source",
-  "Stream Label": "Stream Label",
-  "This is a placeholder description for streamlabels.": "This is a placeholder description for streamlabels.",
-  "New Cheers": "New Cheers",
-  "New Donations": "New Donations",
-  "All-Time Top Donator": "All-Time Top Donator",
-  "Weekly Top Donator": "Weekly Top Donator",
-  "Monthly Follows": "Monthly Follows",
-  "Many more": "Many more",
-  "Welcome to sources!": "Welcome to sources!",
-  "Browse through our Standard and Widget sources": "Browse through our Standard and Widget sources",
-  "Click a source to get more details about it": "Click a source to get more details about it",
-  "Standard": "Standard",
-  "Widgets": "Widgets",
-  "Alertbox": "Alertbox",
-  "Essential": "Essential",
-  "Event List": "Event List",
-  "Donation Ticker": "Donation Ticker",
-  "The source name is required": "The source name is required",
-  "Unable to add a source: the scene you are trying to add already contains your current scene": "Unable to add a source: the scene you are trying to add already contains your current scene",
-  "Add New Source": "Add New Source",
-  "Please enter the name of the source": "Please enter the name of the source",
-  "Add Existing Source": "Add Existing Source",
-  "Recommended": "Recommended",
-  "Please enter the name of the folder": "Please enter the name of the folder",
-  "Properties for %{sourceName}": "Properties for %{sourceName}",
-  "Supports": "Supports",
-  "Widget Type": "Widget Type",
-  "Configure": "Configure",
-  "Go To Widget Settings": "Go To Widget Settings",
-  "Test Widgets": "Test Widgets",
-  "Hide Test Widgets": "Hide Test Widgets",
-  "Add Folder": "Add Folder",
-  "Remove Sources": "Remove Sources",
-  "Setup Source Properties": "Setup Source Properties",
-  "Rename Folder": "Rename Folder",
-  "Name Folder": "Name Folder",
-  "Rename Source": "Rename Source",
-  "Name Source": "Name Source",
-  "Layer filters": "Layer filters",
-  "Add layer filter": "Add layer filter",
-  "Reset Transform": "Reset Transform",
-  "Flip Vertical": "Flip Vertical",
-  "Flip Horizontal": "Flip Horizontal",
-  "Stretch to Screen": "Stretch to Screen",
-  "Fit to Screen": "Fit to Screen",
-  "Center on Screen": "Center on Screen",
-  "Rotate 90 Degrees CW": "Rotate 90 Degrees CW",
-  "Rotate 90 Degrees CCW": "Rotate 90 Degrees CCW",
-  "Rotate 180 Degrees": "Rotate 180 Degrees",
-  "Paste (Reference)": "Paste (Reference)",
-  "Paste (Duplicate)": "Paste (Duplicate)",
-  "Invert Selection": "Invert Selection",
-  "Transform": "Transform",
-  "Export Widget": "Export Widget",
-  "Copy Filters": "Copy Filters",
-  "Paste Filters": "Paste Filters",
-  "Properties": "Properties",
-  "Lock Sources": "Lock Sources",
-  "Unlock Sources": "Unlock Sources",
-  "Group into Folder": "Group into Folder",
-  "Ungroup Folder": "Ungroup Folder",
-  "Group into Scene": "Group into Scene",
-  "Ungroup Scene": "Ungroup Scene",
-  "Create Source Projector": "Create Source Projector",
-  "Click \"Add Source\" when you're ready to add it to your scene": "Click \"Add Source\" when you're ready to add it to your scene",
-  "BrowserSource": "BrowserSource",
-  "NDI source": "NDI source",
-  "Use Google Font": "Use Google Font",
-  "Center Horizontal": "Center Horizontal",
-  "Center Vertical": "Center Vertical",
-  "Unhide All": "Unhide All",
-  "Cloud Backup: All media and sources are backed up in the cloud": "Cloud Backup: All media and sources are backed up in the cloud",
-  "Cloud Backup: Your media and sources are being synced with the cloud": "Cloud Backup: Your media and sources are being synced with the cloud"
+  "Follower Goal": "팔로워 목표",
+  "Twitch Follows": "Twitch 팔로우",
+  "Youtube Follows": "YouTube 팔로우",
+  "Mixer Follows": "Mixer 팔로우",
+  "Bit Goal": "비트 목표",
+  "Twitch Bits": "Twitch 비트",
+  "Subscription Goal": "구독 목표",
+  "Youtube Subscribers": "YouTube 구독자",
+  "Chatbox": "채팅상자",
+  "Include your channel's chat into your stream.": "방송에 채널의 채팅을 삽입합니다.",
+  "Twitch chat": "Twitch 채팅",
+  "Youtube chat": "YouTube 채팅",
+  "The Jar": "병",
+  "The jar that catches bits, tips, and more.": "병 안에 비트, 후원, 그리고 여러가지가 담깁니다.",
+  "Viewer Count": "시청자 수",
+  "Show off your viewers from multiple platforms.": "다수의 플랫폼에서의 시청자를 보여줍니다.",
+  "Stream Boss": "방송 대장",
+  "Battle with bits to be the boss of the stream!": "비트로 방송의 대장을 결정하세요!",
+  "Credits": "크레딧",
+  "Rolling credits to play at the end of your stream.": "방송이 끝난 후에 크레딧을 보여줍니다.",
+  "New Followers": "새 팔로워",
+  "New Subscribers": "새 구독자",
+  "Cheers": "응원",
+  "Spin Wheel": "돌림판",
+  "Spin the wheel to make a decision.": "결정을 하기 위해 돌림판을 돌리세요.",
+  "The streamer manually triggers a spin anytime while they are live.": "스트리머가 방송 중일때 어느 때든 수동으로 돌림판을 돌릴 수 있습니다.",
+  "Allows you to add existing scene as a source": "기존 장면을 소스로 추가할 수 있음",
+  "Stream Label": "방송 라벨",
+  "This is a placeholder description for streamlabels.": "방송에 쓰일만한 라벨을 표시해줍니다.",
+  "New Cheers": "새 응원",
+  "New Donations": "새 후원",
+  "All-Time Top Donator": "모든 기간 최다 후원자",
+  "Weekly Top Donator": "주간 최다 후원자",
+  "Monthly Follows": "월간 팔로우",
+  "Many more": "이외 여러가지",
+  "Welcome to sources!": "소스에 오신 것을 환영합니다!",
+  "Browse through our Standard and Widget sources": "기본 및 위젯 소스에서 찾아보기",
+  "Click a source to get more details about it": "소스를 눌러 자세한 정보를 알아볼 수 있음",
+  "Standard": "기본",
+  "Widgets": "위젯",
+  "Alertbox": "알림상자",
+  "Essential": "필수",
+  "Event List": "이벤트 목록",
+  "Donation Ticker": "후원 표시",
+  "The source name is required": "소스 이름이 필요함",
+  "Unable to add a source: the scene you are trying to add already contains your current scene": "소스를 추가할 수 없음: 추가하려는 장면은 이미 현재 장면에 이미 있음",
+  "Add New Source": "새 소스 추가",
+  "Please enter the name of the source": "소스의 이름을 입력해야 함",
+  "Add Existing Source": "이미 있는 소스 추가",
+  "Recommended": "추천",
+  "Please enter the name of the folder": "폴더의 이름을 입력해야 함",
+  "Properties for %{sourceName}": "%{sourceName}의 속성",
+  "Supports": "지원",
+  "Widget Type": "위젯 종류",
+  "Configure": "설정",
+  "Go To Widget Settings": "위젯 설정으로 가기",
+  "Test Widgets": "위젯 테스트",
+  "Hide Test Widgets": "테스트 위젯 숨기기",
+  "Add Folder": "폴더 추가",
+  "Remove Sources": "소스 삭제",
+  "Setup Source Properties": "소스 속성 설정",
+  "Rename Folder": "폴더 이름 바꾸기",
+  "Name Folder": "폴더 이름 짓기",
+  "Rename Source": "소스 이름 바꾸기",
+  "Name Source": "소스 이름 짓기",
+  "Layer filters": "레이어 필터",
+  "Add layer filter": "레이어 필터 추가",
+  "Reset Transform": "변환 초기화",
+  "Flip Vertical": "수직으로 뒤집기",
+  "Flip Horizontal": "수평으로 뒤집기",
+  "Stretch to Screen": "화면에 늘리기",
+  "Fit to Screen": "화면에 맞추기",
+  "Center on Screen": "화면 중앙으로 하기",
+  "Rotate 90 Degrees CW": "시계 방향으로 90도 회전",
+  "Rotate 90 Degrees CCW": "반시계 방향으로 90도 회전",
+  "Rotate 180 Degrees": "180도 회전",
+  "Paste (Reference)": "붙여넣기 (참조)",
+  "Paste (Duplicate)": "붙여넣기 (복제)",
+  "Invert Selection": "반전 선택",
+  "Transform": "변환",
+  "Export Widget": "위젯 내보내기",
+  "Copy Filters": "필터 복사",
+  "Paste Filters": "필터 붙여넣기",
+  "Properties": "속성",
+  "Lock Sources": "소스 잠그기",
+  "Unlock Sources": "소스 잠금 풀기",
+  "Group into Folder": "폴더로 묶기",
+  "Ungroup Folder": "폴더 그룹 풀기",
+  "Group into Scene": "장면으로 묶기",
+  "Ungroup Scene": "장면 그룹 풀기",
+  "Create Source Projector": "소스 프로젝터 만들기",
+  "Click \"Add Source\" when you're ready to add it to your scene": "장면에 추가할 준비가 되었다면 \"소스 추가\"를 눌러서 추가",
+  "BrowserSource": "브라우저 소스",
+  "NDI source": "NDI 소스",
+  "Use Google Font": "Google Font 사용",
+  "Center Horizontal": "수평 중심",
+  "Center Vertical": "수직 중심",
+  "Unhide All": "모두 숨기기 해제",
+  "Cloud Backup: All media and sources are backed up in the cloud": "클라우드 백업: 모든 미디어와 소스가 클라우드에 백업됨",
+  "Cloud Backup: Your media and sources are being synced with the cloud": "클라우드 백업: 모든 미디어와 소스가 클라우드와 동기화됨"
 }
