--- a/app/i18n/ko-KR/streaming.json
+++ b/app/i18n/ko-KR/streaming.json
@@ -1,49 +1,49 @@
 {
-  "Are you sure you want to stop streaming?": "Are you sure you want to stop streaming?",
-  "Invalid Path or Connection URL.  Please check your settings to confirm that they are valid.": "Invalid Path or Connection URL.  Please check your settings to confirm that they are valid.",
-  "Failed to connect to the streaming server.  Please check your internet connection.": "Failed to connect to the streaming server.  Please check your internet connection.",
-  "Disconnected from the streaming server.  Please check your internet connection.": "Disconnected from the streaming server.  Please check your internet connection.",
-  "Could not access the specified channel or stream key, please double-check your stream key.  ": "Could not access the specified channel or stream key, please double-check your stream key.  ",
-  "If it is correct, there may be a problem connecting to the server.": "If it is correct, there may be a problem connecting to the server.",
-  "There is not sufficient disk space to continue recording.": "There is not sufficient disk space to continue recording.",
-  "The output format is either unsupported or does not support more than one audio track.  ": "The output format is either unsupported or does not support more than one audio track.  ",
-  "Please check your settings and try again.": "Please check your settings and try again.",
-  "An unexpected error occurred:": "An unexpected error occurred:",
-  "Title": "Title",
-  "Game": "Game",
-  "Do not show this message when going live": "Do not show this message when going live",
-  "You will not be asked again to update your stream info when going live.  ": "You will not be asked again to update your stream info when going live.  ",
-  "You can re-enable this from the settings.": "You can re-enable this from the settings.",
-  "Confirm & Go Live": "Confirm & Go Live",
-  "Update Stream Info": "Update Stream Info",
-  "There was an error fetching your channel information.  You can try": "There was an error fetching your channel information.  You can try",
-  "fetching the information again": "fetching the information again",
-  "or you can": "or you can",
-  "just go live.": "just go live.",
-  "If this error persists, you can try logging out and back in.": "If this error persists, you can try logging out and back in.",
-  "Use optimized encoder settings": "Use optimized encoder settings",
-  "Optimized encoder gives equivalent quality while reducing usage. Game specific encoders for Fortnite, PUBG, Destiny 2, and League Of Legends": "Optimized encoder gives equivalent quality while reducing usage. Game specific encoders for Fortnite, PUBG, Destiny 2, and League Of Legends",
-  "Something went wrong while updating your stream info.  Please try again.": "Something went wrong while updating your stream info.  Please try again.",
-  "Something went wrong while updating your stream info. You can try again, or you can": "Something went wrong while updating your stream info. You can try again, or you can",
-  "just go live": "just go live",
-  "Optimized profile for average CPUs": "Optimized profile for average CPUs",
-  "Optimized profile for weak CPUs": "Optimized profile for weak CPUs",
-  "YouTube account not enabled for live streaming": "YouTube account not enabled for live streaming",
-  "Fix": "Fix",
+  "Are you sure you want to stop streaming?": "정말로 방송을 중단하시겠습니까?",
+  "Invalid Path or Connection URL.  Please check your settings to confirm that they are valid.": "잘못된 경로 또는 연결 URL입니다.  설정이 유효한 지 확인해주세요.",
+  "Failed to connect to the streaming server.  Please check your internet connection.": "방송 서버와 연결할 수 없습니다.  인터넷 연결을 확인해주세요.",
+  "Disconnected from the streaming server.  Please check your internet connection.": "방송 서버와의 연결이 끊어졌습니다.  인터넷 연결을 확인해주세요.",
+  "Could not access the specified channel or stream key, please double-check your stream key.  ": "특정 채널이나 스트림 키에 접근할 수 없기 떄문에, 스트림 키를 두 번 확인해보세요.  ",
+  "If it is correct, there may be a problem connecting to the server.": "그래도 맞다면, 아마 서버와의 연결에 문제가 있는 것입니다.",
+  "There is not sufficient disk space to continue recording.": "녹화를 계속 진행할 만한 양의 디스크 용량이 없습니다.",
+  "The output format is either unsupported or does not support more than one audio track.  ": "출력 형식이 지원되지 않거나 하나 이상의 오디오 트랙을 지원하지 않습니다.  ",
+  "Please check your settings and try again.": "설정을 확인한 후 다시 시도해주세요.",
+  "An unexpected error occurred:": "알 수 없는 오류 발생:",
+  "Title": "제목",
+  "Game": "게임",
+  "Do not show this message when going live": "방송을 시작할 때 이 메시지 보지 않기",
+  "You will not be asked again to update your stream info when going live.  ": "다음 번에 방송을 시작할 때에는 방송 업데이트를 묻지 않을 것입니다.  ",
+  "You can re-enable this from the settings.": "설정에서 다시 활성화할 수 있습니다.",
+  "Confirm & Go Live": "확인 & 방송 시작",
+  "Update Stream Info": "방송 정보 업데이트",
+  "There was an error fetching your channel information.  You can try": "채널 정보를 수신할 수 없습니다.  몇가지 시도를 할 수 있는데",
+  "fetching the information again": "정보를 다시 수신하거나",
+  "or you can": "그냥",
+  "just go live.": "바로 방송할 수 있습니다.",
+  "If this error persists, you can try logging out and back in.": "이 오류가 지속된다면, 로그아웃 한 후 다시 시도해보세요.",
+  "Use optimized encoder settings": "최적화된 인코더 설정 사용",
+  "Optimized encoder gives equivalent quality while reducing usage. Game specific encoders for Fortnite, PUBG, Destiny 2, and League Of Legends": "최적화된 인코더는 사용량을 줄이고도 품질이 동일합니다. 포트나이트, PUBG, Destiny 2, 그리고 리그 오브 레전드의 전용 인코더가 있습니다.",
+  "Something went wrong while updating your stream info.  Please try again.": "방송 정보를 업데이트하는 중에 오류가 발생했습니다.  다시 시도해보세요.",
+  "Something went wrong while updating your stream info. You can try again, or you can": "방송 정보를 업데이트 하는 중에 오류가 발생했습니다. 다시 시도하거나, ",
+  "just go live": "그냥 방송할 수 있습니다",
+  "Optimized profile for average CPUs": "일반적인 CPU에 최적화된 프로필",
+  "Optimized profile for weak CPUs": "저가 CPU에 최적화된 프로필",
+  "YouTube account not enabled for live streaming": "YouTube 계정에서 실시간 방송이 활성화되어 있지 않음",
+  "Fix": "고치기",
   "I'm set up": "I'm set up",
-  "END STREAM": "END STREAM",
-  "STARTING": "STARTING",
-  "ENDING": "ENDING",
-  "RECONNECTING": "RECONNECTING",
-  "GO LIVE": "GO LIVE",
-  "Go to Youtube to view your live stream": "Go to Youtube to view your live stream",
-  "Edit your stream title and description": "Edit your stream title and description",
-  "Go to Youtube Live Dashboard to control your stream": "Go to Youtube Live Dashboard to control your stream",
-  "Are you sure you want to exit while live?": "Are you sure you want to exit while live?",
-  "Enable the preview stream": "Enable the preview stream",
-  "Disable the preview stream, can help with CPU": "Disable the preview stream, can help with CPU",
-  "viewers": "viewers",
-  "Refresh Chat": "Refresh Chat",
-  "Your chat is currently offline": "Your chat is currently offline",
-  "Set path in Settings > Output.": "Set path in Settings > Output."
+  "END STREAM": "방송 종료",
+  "STARTING": "시작 중",
+  "ENDING": "종료 중",
+  "RECONNECTING": "다시 연결 중",
+  "GO LIVE": "방송 시작",
+  "Go to Youtube to view your live stream": "Youtube로 가서 실시간 방송을 시청하기",
+  "Edit your stream title and description": "방송 제목과 설명 수정하기",
+  "Go to Youtube Live Dashboard to control your stream": "Youtube 실시간 대시보드에서 방송 제어",
+  "Are you sure you want to exit while live?": "정말로 방송 중에 나가시겠습니까?",
+  "Enable the preview stream": "방송 미리보기 활성화",
+  "Disable the preview stream, can help with CPU": "방송 미리보기 비활성화, CPU에 도움이 됨",
+  "viewers": "시청자",
+  "Refresh Chat": "채팅 새로고침",
+  "Your chat is currently offline": "현재 채팅은 오프라인임",
+  "Set path in Settings > Output.": "경로를 설정 > 출력에서 설정해주세요."
 }
