--- a/app/i18n/ko-KR/streamlabels.json
+++ b/app/i18n/ko-KR/streamlabels.json
@@ -1,19 +1,19 @@
 {
-  "Label Type": "Label Type",
-  "Label Template": "Label Template",
-  "Item Template": "Item Template",
-  "Item Separator": "Item Separator",
-  "Item Limit": "Item Limit",
-  "Duration (seconds)": "Duration (seconds)",
-  "Show Clock": "Show Clock",
-  "Always, show 0:00 when inactive": "Always, show 0:00 when inactive",
-  "Hide when inactive": "Hide when inactive",
-  "Show Count": "Show Count",
-  "Always, show 0 when inactive": "Always, show 0 when inactive",
-  "Show Latest": "Show Latest",
-  "Always, show last person when inactive": "Always, show last person when inactive",
-  "Include Resubs": "Include Resubs",
-  "Preview": "Preview",
-  "Note:": "Note:",
-  "Actual label text may take up to 60 seconds to update": "Actual label text may take up to 60 seconds to update"
+  "Label Type": "라벨 종류",
+  "Label Template": "라벨 형식",
+  "Item Template": "내용 형식",
+  "Item Separator": "구분 기호",
+  "Item Limit": "개수 제한",
+  "Duration (seconds)": "길이 (초)",
+  "Show Clock": "시간 보여주기",
+  "Always, show 0:00 when inactive": "항상, 활동하지 않을 때는 0:00으로 보여주기",
+  "Hide when inactive": "활동하지 않을 때는 숨기기",
+  "Show Count": "카운트 보여주기",
+  "Always, show 0 when inactive": "항상, 활동하지 않을 때는 0으로 보여주기",
+  "Show Latest": "마지막 보여주기",
+  "Always, show last person when inactive": "항상, 활동하지 않을 때는 마지막 사람으로 보여주기",
+  "Include Resubs": "재구독 포함",
+  "Preview": "미리보기",
+  "Note:": "참고:",
+  "Actual label text may take up to 60 seconds to update": "실제 라벨 텍스트는 업데이트 할 때까지 최대 60초 걸릴 수 있음"
 }
