--- a/app/i18n/ko-KR/troubleshooter.json
+++ b/app/i18n/ko-KR/troubleshooter.json
@@ -1,26 +1,26 @@
 {
-  "Troubleshooter": "Troubleshooter",
-  "Open Settings": "Open Settings",
-  " Streamlabs OBS has detected dropped frames": " Streamlabs OBS has detected dropped frames",
-  "What does this mean?": "What does this mean?",
-  " Some frames have not been uploaded. This problem is usually related to a poor network connection.": " Some frames have not been uploaded. This problem is usually related to a poor network connection.",
-  "What can I do?": "What can I do?",
-  "Check the health of your Internet connection": "Check the health of your Internet connection",
-  "Change your ingest server": "Change your ingest server",
-  "If none of these worked, lower your bitrate": "If none of these worked, lower your bitrate",
-  "Streamlabs OBS has detected skipped frames": "Streamlabs OBS has detected skipped frames",
-  "Some frames have not been encoded.": "Some frames have not been encoded.",
-  "This problem is usually due to high CPU usage or unsuitable encoder settings.": "This problem is usually due to high CPU usage or unsuitable encoder settings.",
-  "Lower your encoder settings (preset)": "Lower your encoder settings (preset)",
-  "Ensure that you don't have any other applications open that are heavy on your CPU": "Ensure that you don't have any other applications open that are heavy on your CPU",
-  "Enable performance mode in the Editor context menu": "Enable performance mode in the Editor context menu",
-  "Streamlabs OBS has detected lagged frames": "Streamlabs OBS has detected lagged frames",
-  "Some frames took too long to get rendered.": "Some frames took too long to get rendered.",
-  "Usually the problem is related to your game using up too many GPU resources.": "Usually the problem is related to your game using up too many GPU resources.",
-  "When this happens, Streamlabs OBS does not have any resources left over to render frames.": "When this happens, Streamlabs OBS does not have any resources left over to render frames.",
-  "Cap your in-game framerate": "Cap your in-game framerate",
-  "Enable VSync in your game": "Enable VSync in your game",
-  "Disable FreeSync or GSync in your Driver": "Disable FreeSync or GSync in your Driver",
-  "Lower graphics settings until you stop lagging frames": "Lower graphics settings until you stop lagging frames",
-  "Disable hardware decoding under any media sources(This will slightly increase cpu over gpu)": "Disable hardware decoding under any media sources(This will slightly increase cpu over gpu)"
+  "Troubleshooter": "문제 해결사",
+  "Open Settings": "설정 열기",
+  " Streamlabs OBS has detected dropped frames": " Streamlabs OBS가 드랍된 프레임을 감지함",
+  "What does this mean?": "이것은 무엇을 의미하나요?",
+  " Some frames have not been uploaded. This problem is usually related to a poor network connection.": " 어떤 프레임들이 전송되지 않았습니다. 이 문제는 보통 나쁜 인터넷 연결 떄문에 일어납니다.",
+  "What can I do?": "어떻게 해야하나요?",
+  "Check the health of your Internet connection": "인터넷 연결 상태 확인하기",
+  "Change your ingest server": "인제스트 서버 바꾸기",
+  "If none of these worked, lower your bitrate": "아무것도 효과가 없나면, 비트레이트를 내려보세요",
+  "Streamlabs OBS has detected skipped frames": "Streamlabs OBS가 건너뛴 프레임을 감지함",
+  "Some frames have not been encoded.": "어던 프레임들이 인코딩되지 않았을 수 있습니다.",
+  "This problem is usually due to high CPU usage or unsuitable encoder settings.": "이 문제는 보통 높은 CPU 사용률 또는 부적절한 인코더 설정 때문에 일어납니다.",
+  "Lower your encoder settings (preset)": "인코더 설정을 내리세요 (프리셋)",
+  "Ensure that you don't have any other applications open that are heavy on your CPU": "CPU가 무거운 프로그램을 돌리고 있는지 확인",
+  "Enable performance mode in the Editor context menu": "성능 모드를 편집기 매뉴에서 활성화",
+  "Streamlabs OBS has detected lagged frames": "Streamlabs OBS가 지연된 프레임을 감지함",
+  "Some frames took too long to get rendered.": "어떤 프레임이 렌더링을 하는 데에 너무 오래 걸립니다.",
+  "Usually the problem is related to your game using up too many GPU resources.": "이 문제는 보통 게임이 매우 많은 GPU 자운을 소모하기 때문에 일어납니다.",
+  "When this happens, Streamlabs OBS does not have any resources left over to render frames.": "이 상황이 일어날경우, Streamlabs OBS가 프레임을 렌더링 할 자원이 없습니다.",
+  "Cap your in-game framerate": "인게임 프레임 캡쳐",
+  "Enable VSync in your game": "게임에서 VSync 활성화",
+  "Disable FreeSync or GSync in your Driver": "FreeSync 또는 GSync를 드라이버에서 비활성화",
+  "Lower graphics settings until you stop lagging frames": "그래픽 설정을 프레임 지연이 없어질 때까지 내리기",
+  "Disable hardware decoding under any media sources(This will slightly increase cpu over gpu)": "하드웨어 디코딩을 쓰는 미디어 자원 비활성화(이렇게 하면 CPU와 GPU가 어느정도 향상돰)"
 }
