--- a/app/i18n/ko-KR/scenes.json
+++ b/app/i18n/ko-KR/scenes.json
@@ -1,32 +1,32 @@
 {
-  "Please enter the name of the Scenes Collection": "장면 컬렉션의 이름을 입력 하십시오",
-  "The scene name is required": "장면 이름이 필요합니다.",
-  "Please enter the name of the scene": "장면의 이름을 입력 하십시오",
-  "Manage Scene Collections": "장면 컬렉션 관리",
-  "There needs to be at least one scene.": "한장면이상이 필요합니다.",
+  "Please enter the name of the Scenes Collection": "장면 모음 이름 입력",
+  "The scene name is required": "장면 이름 필요",
+  "Please enter the name of the scene": "장면의 이름을 입력해야 함",
+  "Manage Scene Collections": "장면 모음 관리",
+  "There needs to be at least one scene.": "한 장면 이상이 필요합니다.",
   "Projector:": "프로젝터:",
   "Projector: Output": "프로젝터: 출력",
-  "Manage All": "모두 관리",
-  "This is where your Scene Collections live. Clicking the title will dropdown a menu where you can view & manage.": "이는 라이브 장면 컬렉션입니다. 클릭하면 메뉴를 볼수 및 관리 할수있습니다.",
-  "Are you sure you want to remove %{collectionName}?": "당신은 %{collectionName} 을 제거 하 시겠습니까?",
+  "Manage All": "모두 관리하기",
+  "This is where your Scene Collections live. Clicking the title will dropdown a menu where you can view & manage.": "이것은 방송 장면 모음입니다. 클릭하면 메뉴를 보거나 관리할 수 있습니다.",
+  "Are you sure you want to remove %{collectionName}?": "정말로 %{collectionName}을 제거하시겠습니까?",
   "Create Scene Projector": "장면 프로젝터 만들기",
-  "Preview is disabled in performance mode": "성능 모드에서 미리 보기를 사용할 수 없습니다.",
-  "Your preview is currently disabled": "당신의 미리 보기 현재 비활성화돼있습니다.",
-  "Are you sure you want to remove %sceneName%?": "당신은 %sceneName% 을 제거 하 시겠습니까?",
+  "Preview is disabled in performance mode": "성능 모드에서 미리 보기를 사용할 수 없음",
+  "Your preview is currently disabled": "현재 미리보기 비활성화됨",
+  "Are you sure you want to remove %sceneName%?": "정말로 %sceneName%을 제거하시겠습니까?",
   "Performance Mode": "성능 모드",
   "Create Output Projector": "출력 프로젝터 만들기",
   "Studio Mode": "스튜디오 모드",
-  "Are you sure you want to remove %{sceneName}?": "당신은 %{sceneName} 을 제거 하시겠습니까?",
-  "Disable Performance Mode": "성능 모드 해제",
-  "Scene Collections": "장면 컬렉션",
-  "The building blocks of your scene. Also contains widgets.": "귀하의 빌딩 블록입니다. 또한 위젯을 포함 되어 있습니다.",
-  "Add a new Source to your Scene. Includes widgets.": "귀하의 현장에 새로운 소스를 추가 합니다. 위젯을 포함 됩니다.",
-  "Remove Sources from your Scene.": "귀하의 현장에서 소스를 제거 합니다.",
-  "Open the Source Properties.": "원본 속성을 엽니다.",
-  "Add a Group so you can move multiple Sources at the same time.": "동시에 여러 소스를 이동하려면 그룹을 추가 하세요.",
+  "Are you sure you want to remove %{sceneName}?": "정말로 %{sceneName}을 제거하시겠습니까?",
+  "Disable Performance Mode": "성능 모드 비활성화",
+  "Scene Collections": "장면 모음",
+  "The building blocks of your scene. Also contains widgets.": "장면을 제작하는 블록입니다. 그리고 위젯도 포함합니다.",
+  "Add a new Source to your Scene. Includes widgets.": "장면에 새 소스를 추가합니다. 위젯을 포함합니다.",
+  "Remove Sources from your Scene.": "장면에서 소스를 제거합니다.",
+  "Open the Source Properties.": "소스 속성을 엽니다.",
+  "Add a Group so you can move multiple Sources at the same time.": "동시에 여러 소스를 이동하기 위해 그룹을 추가하세요.",
   "Cloud Backup": "클라우드 백업",
-  "Your media files are currently being synced with the cloud. ": "미디어 파일은 현재 클라우드 동기화 되고 있습니다. ",
-  "It is recommended that you wait until this finishes before going live.": "이 라이브 진행 하기 전에 완료 될 때까지 기다리는 것을 추천 합니다.",
-  "Go Live Anyway": "일단 라이브로 전환합니다.",
+  "Your media files are currently being synced with the cloud. ": "미디어 파일들은 현재 클라우드에 동기화되고 있습니다. ",
+  "It is recommended that you wait until this finishes before going live.": "방송을 진행하기 전에 완료 될 때까지 기다리는 것을 추천합니다.",
+  "Go Live Anyway": "무시하고 방송 시작",
   "Wait": "대기"
 }
