--- a/app/i18n/ko-KR/settings.json
+++ b/app/i18n/ko-KR/settings.json
@@ -1,6 +1,6 @@
 {
   "General": "일반",
-  "Stream": "스트림",
+  "Stream": "방송",
   "Output": "출력",
   "Audio": "오디오",
   "Video": "비디오",
@@ -11,63 +11,63 @@
   "Appearance": "외관",
   "Remote Control": "원격 제어",
   "Night mode": "야간 모드",
-  "If you are experiencing weird behavior, you can try deleting your cache directory.  This will result in you losing your scene configuration and settings, but can fix some stability issues.": "이상한 동작을 발생 하는 경우 캐시 디렉터리 삭제 시도해보세요.  이 장면 구성 및 설정, 없어집니다. 하지만 몇 가지 안정성 문제를 해결할 수 있습니다.",
-  "Show Cache Directory": "캐시 디렉터리 표시",
-  "Delete Cache and Restart": "삭제 캐시 및 다시 시작",
-  "Upload Cache to Developers": "개발자에게 캐시를 업로드",
-  "Restart Streamlabels Session": "Streamlabels 세션을 다시 시작",
+  "If you are experiencing weird behavior, you can try deleting your cache directory.  This will result in you losing your scene configuration and settings, but can fix some stability issues.": "이상한 동작이 발생할 경우, 캐시 디렉토리를 삭제해보세요.  이 때 장면 구성 및 설정이 없어지긴 하지만, 대부분의 안정성 문제를 해결할 수 있습니다.",
+  "Show Cache Directory": "캐시 디렉토리 표시",
+  "Delete Cache and Restart": "캐시 삭제 및 다시 시작",
+  "Upload Cache to Developers": "개발자에게 캐시 보내기",
+  "Restart Streamlabels Session": "Streamlabels 세션 다시 시작",
   "Run Auto Optimizer": "자동 최적화 실행",
-  "Confirm stream title and game before going live": "라이브 전에 스트림 제목 및 게임 확인",
-  "WARNING! You will lose all scenes, sources, and settings. This cannot be undone!": "경고! 모든 장면, 원본 및 설정을 잃게 됩니다. 이것은 취소할 수 없습니다!",
-  "Your cache directory has been successfully uploaded.  The file name %{file} has been copied to your clipboard.  Please paste it into discord and tag a developer.": "캐시 디렉토리를 성공적으로 업로드 되었습니다.  파일 이름 %{file} 이 클립보드에 복사 되었습니다.   디스코드에다 붙여넣은 다음에 개발자를 태그 해주세요.",
-  "Streamlabels session has been succesfully restarted!": "Streamlabels 세션은 성공적으로 다시 시작 되었습니다!",
-  "This action will restart the application. Continue?": "This action will restart the application. Continue?",
-  "Show confirmation dialog when starting streams": "Show confirmation dialog when starting streams",
-  "Show confirmation dialog when stopping streams": "Show confirmation dialog when stopping streams",
-  "Automatically record when streaming": "Automatically record when streaming",
-  "Keep recording when stream stops": "Keep recording when stream stops",
-  "Source Alignement Snapping": "Source Alignement Snapping",
-  "Snap Sources to edge of screen": "Snap Sources to edge of screen",
-  "Snap Sources to other sources": "Snap Sources to other sources",
-  "Stream Type": "Stream Type",
-  "Output Mode": "Output Mode",
-  "Streaming": "Streaming",
-  "Enable Advanced Encoder Settings": "Enable Advanced Encoder Settings",
-  "Enforce streaming service bitrate limits": "Enforce streaming service bitrate limits",
-  "Encoder Preset (Higher = Less CPU)": "Encoder Preset (Higher = Less CPU)",
-  "Generate File Name without Space": "Generate File Name without Space",
-  "Recording": "Recording",
-  "Recording Quality": "Recording Quality",
-  "Recording Format": "Recording Format",
-  "Custom Muxer Settings": "Custom Muxer Settings",
-  "Enable Replay Buffer": "Enable Replay Buffer",
-  "Base (Canvas) Resolution": "Base (Canvas) Resolution",
-  "Output (Scaled) Resolution": "Output (Scaled) Resolution",
-  "Downscale Filter": "Downscale Filter",
-  "Bilinear (Fastest, but blurry if scaling)": "Bilinear (Fastest, but blurry if scaling)",
-  "Bicubic (Sharpened scaling, 16 samples)": "Bicubic (Sharpened scaling, 16 samples)",
-  "Lanczos (Sharpened scaling, 32 samples)": "Lanczos (Sharpened scaling, 32 samples)",
-  "No elements found. Consider changing the search query.": "No elements found. Consider changing the search query.",
-  "Do not back up my media files in the cloud (requires app restart)": "Do not back up my media files in the cloud (requires app restart)",
-  "FPS Type": "FPS Type",
-  "Common FPS Values": "Common FPS Values",
-  "Integer FPS Value": "Integer FPS Value",
-  "Fractional FPS Value": "Fractional FPS Value",
-  "Process Priority": "Process Priority",
-  "Color Format": "Color Format",
-  "Audio Monitoring Device": "Audio Monitoring Device",
-  "Disable Windows audio ducking": "Disable Windows audio ducking",
-  "YUV Color Space": "YUV Color Space",
-  "YUV Color Range": "YUV Color Range",
-  "Stream Delay": "Stream Delay",
-  "Duration (Seconds)": "Duration (Seconds)",
-  "Preserved cutoff point (increase delay) when reconnecting": "Preserved cutoff point (increase delay) when reconnecting",
-  "Desktop Audio Device": "Desktop Audio Device",
-  "Mic/Auxiliary Device": "Mic/Auxiliary Device",
-  "Recording Path": "Recording Path",
-  "Enable": "Enable",
-  "Default": "Default",
-  "Custom Encoder Settings": "Custom Encoder Settings",
-  "Audio Bitrate": "Audio Bitrate",
-  "Video Bitrate": "Video Bitrate"
+  "Confirm stream title and game before going live": "방송 전에 방송 제목 및 게임 확인",
+  "WARNING! You will lose all scenes, sources, and settings. This cannot be undone!": "경고! 모든 장면, 소스 및 설정을 잃게 됩니다. 이것은 되돌릴 수 없습니다!",
+  "Your cache directory has been successfully uploaded.  The file name %{file} has been copied to your clipboard.  Please paste it into discord and tag a developer.": "캐시 디렉토리를 성공적으로 전송했습니다.  파일 이름 %{file}이 클립보드에 복사되었습니다.  Discord에 붙여넣은 후 개발자를 태그해주세요.",
+  "Streamlabels session has been succesfully restarted!": "Streamlabels 세션이 성공적으로 다시 시작되었습니다!",
+  "This action will restart the application. Continue?": "이 행동은 애플리케이션을 재시작합니다. 계속 진행하시겠습니까?",
+  "Show confirmation dialog when starting streams": "방송을 시작할 때 확인 상자 표시",
+  "Show confirmation dialog when stopping streams": "방송을 끝낼 때 확인 상자 표시",
+  "Automatically record when streaming": "방송을 시작하면 자동으로 녹화",
+  "Keep recording when stream stops": "방송이 끝나도 계속 녹화",
+  "Source Alignement Snapping": "소스를 자석처럼 달라붙어서 정렬",
+  "Snap Sources to edge of screen": "소스를 화면 변두리에 붙임",
+  "Snap Sources to other sources": "소스를 다른 소스에 붙임",
+  "Stream Type": "방송 형식",
+  "Output Mode": "출력 방식",
+  "Streaming": "방송",
+  "Enable Advanced Encoder Settings": "고급 인코더 설정 활성화",
+  "Enforce streaming service bitrate limits": "방송 서비스의 비트레이트 제한 적용",
+  "Encoder Preset (Higher = Less CPU)": "인코더 사용량 (높을수록 CPU 사용량 적음)",
+  "Generate File Name without Space": "여백 없이 파일 이름 짓기",
+  "Recording": "녹화",
+  "Recording Quality": "녹화 품질",
+  "Recording Format": "녹화 형식",
+  "Custom Muxer Settings": "사용자 임의 다중화 설정",
+  "Enable Replay Buffer": "리플레이 버퍼 활성화",
+  "Base (Canvas) Resolution": "기본 (캔버스) 해상도",
+  "Output (Scaled) Resolution": "출력 (조정된) 해상도",
+  "Downscale Filter": "축소 필터",
+  "Bilinear (Fastest, but blurry if scaling)": "Bilinear (가장 빠르지만 크기가 바뀔 때 영상이 흐려짐)",
+  "Bicubic (Sharpened scaling, 16 samples)": "Bicubic (크기 변경을 날카롭게 처리, 16 샘플)",
+  "Lanczos (Sharpened scaling, 32 samples)": "Lanczos (크기 변경을 날카롭게 처리, 32 샘플)",
+  "No elements found. Consider changing the search query.": "구성 요소를 찾을 수 없습니다. 한번 검색 단어를 바꿔보세요.",
+  "Do not back up my media files in the cloud (requires app restart)": "미디어 파일을 클라우드에 백업하지 않기 (앱 재시작 필요)",
+  "FPS Type": "FPS 종류",
+  "Common FPS Values": "공통 FPS 값",
+  "Integer FPS Value": "정수 FPS 값",
+  "Fractional FPS Value": "분수 FPS 값",
+  "Process Priority": "프로세스 우선순위",
+  "Color Format": "색상 형식",
+  "Audio Monitoring Device": "오디오 모니터링 장치",
+  "Disable Windows audio ducking": "Windows 오디오 더킹 비활성화",
+  "YUV Color Space": "YUV 색상 공간",
+  "YUV Color Range": "YUV 색상 범위",
+  "Stream Delay": "방송 지연",
+  "Duration (Seconds)": "시간 (Seconds)",
+  "Preserved cutoff point (increase delay) when reconnecting": "재접속 시 잘려나간 지점 보관 (지연시간 증가)",
+  "Desktop Audio Device": "데스크탑 오디오 장치",
+  "Mic/Auxiliary Device": "마이크/보조 장치",
+  "Recording Path": "녹화 경로",
+  "Enable": "활성화",
+  "Default": "기본값",
+  "Custom Encoder Settings": "사용자 임의 인코더 설정",
+  "Audio Bitrate": "오디오 비트레이트",
+  "Video Bitrate": "비티오 비트레이트"
 }
