--- a/app/i18n/ko-KR/source-props.json
+++ b/app/i18n/ko-KR/source-props.json
@@ -1,17 +1,17 @@
 {
-    "Image": "Image",
-    "Color Source": "Color Source",
-    "Browser Source": "Browser Source",
-    "Media Source": "Media Source",
-    "Image Slide Show": "Image Slide Show",
-    "Text (GDI+)": "Text (GDI+)",
-    "Text (FreeType 2)": "Text (FreeType 2)",
-    "Display Capture": "Display Capture",
-    "Window Capture": "Window Capture",
-    "Game Capture": "Game Capture",
-    "Video Capture Device": "Video Capture Device",
-    "Audio Input Capture": "Audio Input Capture",
-    "Audio Output Capture": "Audio Output Capture",
-    "Blackmagic Device": "Blackmagic Device",
-    "NDI Source": "NDI Source"
+    "Image": "이미지",
+    "Color Source": "색상 소스",
+    "Browser Source": "브라우저 소스",
+    "Media Source": "미디어 소스",
+    "Image Slide Show": "이미지 슬라이드 쇼",
+    "Text (GDI+)": "텍스트 (GDI+)",
+    "Text (FreeType 2)": "텍스트 (FreeType 2)",
+    "Display Capture": "디스플레이 캡쳐",
+    "Window Capture": "윈도우 캡쳐",
+    "Game Capture": "게임 캡쳐",
+    "Video Capture Device": "비디오 캡쳐 장치",
+    "Audio Input Capture": "오디오 입력 장치",
+    "Audio Output Capture": "오디오 출력 장치",
+    "Blackmagic Device": "Blackmagic 장치",
+    "NDI Source": "NDI 소스"
 }
