--- a/app/i18n/ko-KR/widgets.json
+++ b/app/i18n/ko-KR/widgets.json
@@ -1,25 +1,25 @@
 {
   "Add Widgets": "위젯 추가",
-  "Select the Streamlabs widgets you would like to activate for your stream. These will get automatically added to your scene.": "Streamlabs에 활성화시키고 싶은 위젯을 선택하세요. 이 위젯들은 자동으로 귀하의 현장에 추가됍니다.",
-  "Thanks viewers with notification popups": "알림 팝업있는 시청자들, 감사합니다.",
-  "Most recent events into your stream": "가장 최근 이벤트를 스트림으로",
-  "A jar that catches bits, tips, and more": "비트, 팁, 하고 더 많은걸 잡는 병",
-  "Your channel's chat in your stream": "귀하의 스트림의 체팅네용",
-  "Show off most recent donations to viewers": "가장 최근 후원을 시청자들한테 보여줌",
-  "Give your viewers a donation target to help you reach": "Give your viewers a donation target to help you reach",
-  "Give your viewers a follower target to help you reach": "Give your viewers a follower target to help you reach",
-  "Give your viewers a bit target to help you reach": "Give your viewers a bit target to help you reach",
-  "Give your viewers a subscriber target to help you reach": "Give your viewers a subscriber target to help you reach",
-  "Show off how many viewers you have from multiple platforms": "Show off how many viewers you have from multiple platforms",
-  "Give your viewers an opportunity of becoming a boss": "Give your viewers an opportunity of becoming a boss",
-  "Rolling credits at the end of your stream": "Rolling credits at the end of your stream",
-  "Add %{widgetscount} Widgets": "Add %{widgetscount} Widgets",
-  "Rather do this manually?": "수동으로 하실레요?",
-  "Setup later": "나중에 설치",
-  "Widget Theme installed & activated. Click here to manage your Widget Profiles.": "위젯 테마 설치하고 활성화. 위제 프로필은 관리하려면 여기를 클릭하세요.",
+  "Select the Streamlabs widgets you would like to activate for your stream. These will get automatically added to your scene.": "Streamlabs에 활성화시키고 싶은 위젯을 선택하세요. 이 위젯들은 자동으로 귀하의 장면에 추가됩니다.",
+  "Thanks viewers with notification popups": "알림 팝업으로 시청자들에게 감사 인사 전하기",
+  "Most recent events into your stream": "가장 최근 이벤트를 방송에서 보여줌",
+  "A jar that catches bits, tips, and more": "비트, 후원, 이외 여러가지를 담는 병",
+  "Your channel's chat in your stream": "방송에 채팅 띄우기",
+  "Show off most recent donations to viewers": "시청자들에게 가장 최근 후원을 보여줌",
+  "Give your viewers a donation target to help you reach": "달성해야 할 후원 목표를 설정해서 시청자들에게 보여줌",
+  "Give your viewers a follower target to help you reach": "달성해야 할 팔로워 목표를 설정해서 시청자들에게 보여줌",
+  "Give your viewers a bit target to help you reach": "달성해야 할 비트 목표를 설정해서 시청자들에게 보여줌",
+  "Give your viewers a subscriber target to help you reach": "달성해야 할 구독 목표를 설정해서 시청자들에게 보여줌",
+  "Show off how many viewers you have from multiple platforms": "다수의 플랫폼에서 몇 명이 보고 있는지 보여주기",
+  "Give your viewers an opportunity of becoming a boss": "시청자들에게 대장이 될 기회를 주기",
+  "Rolling credits at the end of your stream": "방송이 끝난 후 크래딧 띄우기",
+  "Add %{widgetscount} Widgets": "%{widgetscount} 위젯 추가",
+  "Rather do this manually?": "수동으로 하시겠습니까?",
+  "Setup later": "나중에 설정하기",
+  "Widget Theme installed & activated. Click here to manage your Widget Profiles.": "위젯 테마가 설치 및 활성화되었습니다. 위젯 프로필을 관리하려면 여기를 클릭하세요.",
   "Follow": "팔로우",
   "Subscription": "구독",
   "Donation": "후원",
-  "Bits": "Bits",
+  "Bits": "비트",
   "Host": "호스트"
 }
