--- a/app/i18n/en-US/sources.json
+++ b/app/i18n/en-US/sources.json
@@ -69,7 +69,7 @@
   "The streamer manually triggers a spin anytime while they are live.": "The streamer manually triggers a spin anytime while they are live.",
   "Allows you to add existing scene as a source": "Allows you to add existing scene as a source",
   "Stream Label": "Stream Label",
-  "This is a placeholder description for streamlabels.": "This is a placeholder description for streamlabels.",
+  "This is a placeholder description for streamlabels.": "Include text into your stream, such as follower count, last donation, and many others.",
   "New Cheers": "New Cheers",
   "New Donations": "New Donations",
   "All-Time Top Donator": "All-Time Top Donator",
