--- a/app/i18n/en-US/settings.json
+++ b/app/i18n/en-US/settings.json
@@ -23,7 +23,7 @@
   "Streamlabels session has been succesfully restarted!": "Streamlabels session has been succesfully restarted!",
   "This action will restart the application. Continue?": "This action will restart the application. Continue?",
   "Show confirmation dialog when starting streams": "Show confirmation dialog when starting streams",
-  "Show confirmation dialog when stopping streams": "Show confirmation dialogue when stopping streams",
+  "Show confirmation dialog when stopping streams": "Show confirmation dialog when stopping streams",
   "Automatically record when streaming": "Automatically record when streaming",
   "Keep recording when stream stops": "Keep recording when stream stops",
   "Source Alignement Snapping": "Source Alignment Snapping",
